--- a/gb/10/1/6/n2777593.md
+++ b/gb/10/1/6/n2777593.md
@@ -24,31 +24,29 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/9/8/3/n2610783.md#1">辛素 ：多伦多市政罢工后应考虑的问题</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/9/8/8/n2616553.md#1">辛素：跳出思维框框 看清中国现状</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/9/10/8/n2681854.md#1">时事评论 ：eHealth丑闻将卫生厅长拉下马</a></li>
-<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/8/n10285795.md#1" target="_blank">改革开放总设计师还是“总扼制师”？(下)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md#1" target="_blank">探寻真相 兼听则明 ——法轮功小问答</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268821.md#1">濒死游历天堂 英女透露人类将有大事发生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266607.md#1">端午节吃粽子起源不因纪念屈原？一起来揭谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/27/n14167911.md#1">一段婆媳情让她人生遇转机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267369.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（上）活捉外星人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269975.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（下）医院惊魂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270948.md#1">【新闻五人行】G7批中俄 美欧对中共祭出大招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270586.md#1">【菁英论坛】一线城市楼市也崩 上亿房主成负翁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270710.md#1">【时事金扫描】泽连斯基G7之旅三大收获</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269870.md#1">“一带一路”为马来西亚留下“鬼城”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270188.md#1">组图：搞笑宠物摄影奖出炉 钻猫洞的狗夺冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269961.md#1">【新闻五人行】美爆“地狱计划”吓坏中南海</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269948.md#1">收到中共邀约拍统战片 台女星何以奇秒拒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269859.md#1">低调访台受瞩目 胡歌“陪产剪脐带”登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270666.md#1">分享80多岁外婆抗癌成功 白家绮直言一治愈要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270543.md#1">古天乐欠债830万不还？被提告原因遭质疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270562.md#1">中共收买台湾艺人发统战文 终极目标被揭露</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270016.md#1">护理师提醒：人年过50 少补充一种维生素</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270231.md#1">如何延长玫瑰的开花时间？ 让专家告诉你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262442.md#1">寒湿重易生病 中医授怎样吃避免寒从口入</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269880.md#1">加国亚省班芙公园梦莲湖 上榜世界最美湖泊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262443.md#1">中医师：爱吃水果易致寒湿体质 三类人宜戒口</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412120.md#1">【未解之谜】痴迷好莱坞 《乱世佳人》剧作家转世重生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399999.md#1">郑板桥教子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416062.md#1">【时事金扫描】川普突改就职地址 重振好莱坞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416782.md#1">【时事金扫描】川普就职典礼再变 隐藏大事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416095.md#1">【车评】拥有STI灵魂的跑车 2025 Subaru WRX tS</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413081.md#1">除杂货外 Costco六款时尚设计师服装太超值</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415954.md#1">荷兰决定不公开ASML敏感设备对华出口数据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415897.md#1">【快讯】美最高院裁决TikTok败诉 维持禁令</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416015.md#1">港片在大陆市场连连失利 谢霆锋转向开演唱会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415967.md#1">3个女儿同时发烧住院输液 谢娜自曝情绪崩溃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415285.md#1">新片在韩国票房遭遇滑铁卢 宋仲基哽咽拭泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415950.md#1">布鲁斯失智后首露面 握手致谢洛杉矶救灾人员</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415611.md#1">用泡过的茶包做堆肥？ 你应该先做一件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414719.md#1">【元气99】逢年过节 怎样食得开心又健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412855.md#1">自我诊断和改善 摆脱睡眠呼吸中止症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410940.md#1">食物与心灵存在秘密连结 吃对了情绪才好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412714.md#1">中医师推荐年货中药材 为年菜增添滋补功效</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/1/6/n2777593.htm">辛素 ：犹太人文化成就了以色列企业</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/10/1/6/n2777593.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
